# Get-Spectra

./: __init__.py  config.py  diagnose.py  harps.py  iue.py  koa.py  main.py  polarbase.py  pyproject.toml  sophie.py  utils.py
specs/001-add-xshooter/: spec.md  tasks.md
specs/001-add-xshooter/checklists/: requirements.md
specs/002-add-heasarc/: plan.md  research.md  spec.md  tasks.md
specs/002-add-heasarc/checklists/: requirements.md
targets/: lubin2010.csv
