[project]
name = "get-spectra"
version = "0.2.0"
description = "Pipeline idempotente e resiliente para download de espectros astronômicos."
dependencies = [
    "astropy>=5.0",
    "astroquery>=0.4.7",
    "certifi",
    "keyring",
    "pandas>=1.5",
    "pyvo>=1.4",
    "requests>=2.28",
]
requires-python = ">=3.10"
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
